--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -16,7 +16,8 @@
 h1 {
   font-family: 'Fredoka One', cursive;
   font-size: 3em;
-  margin-bottom: 240px;
+  /* margin-bottom: 240px; */
+  margin-bottom: 120px;
 }
 
 
